add a simple style for the catergory filtering

--- a/style.css
+++ b/style.css
@@ -259,3 +259,21 @@ header{
 #user-img{
     border-right: .5px solid black;
 }
+/* mohamed haouari  */
+.filter-section {
+    margin-top: 20px;
+}
+
+.filter-section h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+#category-filter {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+}
