--- a/style.css
+++ b/style.css
@@ -314,3 +314,59 @@ section{
     align-items: center;
     margin-top: 20px;
 }
+.images{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+.img{
+    width: 160px;
+    height: 130px;
+    border-radius:4px;
+}
+#btnAdd {
+     background-color: #df0051; /* Green color */
+     border-radius: calc(infinity * 1px);
+     color: white;
+     border: none;
+     padding: 13px 39px;
+     text-align: center;
+     text-decoration: none;
+     font-size: 11px;
+    font-weight: bold;
+    margin-top: 10px;
+     cursor: pointer;
+ }
+#btnAdd:hover {
+    background-color: #ec1fd8; /* Darker green on hover */
+}
+#BtnDeExplore {
+    border: none;
+    background-color: #fff;
+    color: #000;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+    position: relative;
+}
+#BtnDeExplore::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -20px; /* Extends line 20px to the left */
+    width: calc(100% + 40px); /* Extends line 20px on both sides */
+    height: 2px;
+    background-color: #000;
+    transition: 0.3s;
+}
+
+#BtnDeExplore:hover::after {
+    width: calc(100% + 40px); /* Maintain extended width on hover */
+}
+
+#part >p >span{
+    color: #df0051;
+}
+
