--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ a{
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 600;
+    position: relative;
 }
 body{
     width: 100%;
@@ -18,7 +19,7 @@ body{
    
 }
 header{
-    background: url(/Modern\ Business\ Notion\ Header.png) no-repeat top right/cover;
+    background: url(Modern\ Business\ Notion\ Header.png) no-repeat top right/cover;
     padding: 30px;
     border-bottom: 1px solid rgb(188, 188, 188);
 }
@@ -196,8 +197,17 @@ header{
     align-items: center;
     justify-content: space-around;
     padding: 5px 0px;
+    position: relative;
 }
 .comments >h3{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 15px;
+    color: #7f807f;
+    cursor: pointer;
+}
+.comments >button{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -333,4 +343,80 @@ header{
     background: red;
     color: white;
     font-weight: 800;
+}
+.parent-com{
+    position: absolute;
+    bottom: -40px;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.182);
+    backdrop-filter:blur(20px);
+    border-radius: 30px;
+    box-shadow: 4px 4px 10px #dbdcdb;
+    display: none;
+}
+.comments-card{
+    max-width: 100px;
+    padding: 10px;
+    border: none;
+    border-radius: 12px;
+    outline: none;
+    box-shadow: 4px 4px 10px #dbdcdb;
+    margin-right: 5px;
+}
+.add-com{
+    border: none;
+    padding: 10px;
+    border-radius: 30px;
+    color: rgb(189, 65, 65);
+    background: white;
+    font-size: 12px;
+    font-weight: 700;
+    box-shadow: 4px 4px 10px #dbdcdb;
+}
+.show-card{
+    width: 100%;
+    height: 100%;
+    background: #ffffff23;
+    backdrop-filter: blur(20px);
+    position: absolute;
+    bottom: 1px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    display: none;
+}
+.wrapper-show-card{
+    width: 60%;
+    height: 80%;
+    background: url(Modern\ Business\ Notion\ Header.png);
+    border-radius: 15px;
+    box-shadow: 4px 4px 10px #dbdcdb;
+}
+.t-img{
+    width: 20%;
+    border-radius: 12px;
+    background: #e9e7e7;
+    box-shadow: 8px 8px 10px #adaead;
+    margin: 20px 5px 10px 20px;
+}
+.t-img > img {
+    border-radius: 12px;
+}
+.titre > h5 ,.show-comments > h1{
+    width: 50%;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align: left;
+    margin: 2px auto;
+    padding: 10px 10px ;
+    background: white;
+    box-shadow: 4px 4px 10px #e1e1e1;
+    border-radius: 12px;
+}
+
+.show-comments > p{
+    font-weight: 800;
+    font-size: 30px;
+    color: red;
 }
