--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ body{
     background: #f2f2f2;
    
 }
-#header{
-    background: url(recettes.jpg) no-repeat top right/cover;
+header{
+    background: url(Modern\ Business\ Notion\ Header.png) no-repeat top right/cover;
     padding: 30px;
     border-bottom: 1px solid rgb(188, 188, 188);
 }
 #btn-singup{
     color: red;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 18px;
     background: transparent;
     border-radius: 30px;
@@ -33,12 +33,12 @@ body{
 }
 #btn-login{
     color: red;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 18px;
     background: white;
     border-radius: 30px;
     padding: 10px 20px;
-    box-shadow: 4px 4px 10px #8b8c8b;
+    box-shadow: 2px 2px 10px #d5d6d5;
 }
 #search{
     background: white;
@@ -106,7 +106,7 @@ body{
     border: 1px solid transparent;
     transition: .5s;
 }
-.list-a > li > a:hover{
+.list-a > li > a:hover ,#all{
     color: red;
     border: 1px solid #7f807f;
     border-radius: 20px;
@@ -136,7 +136,7 @@ body{
     padding-left: 100px;
 }
 .views > h1 > span {
-    color: black;
+    color: rgb(255, 0, 0);
     font-weight: 700;
 }
 .section-wrapper-recipes{
@@ -165,17 +165,17 @@ body{
     box-shadow: 4px 4px 10px #dbdcdb;
 }
 .card-recipes{
-    max-width: 205px;
+    width: 205px;
 }
 .img{
     width: 80%;
-    background: white;
     margin: 0 auto;
-    box-shadow: 4px 4px 10px #dbdcdb;
 }
 #img-recipes{
     margin-top: -50px;
+    height: 150px;
     border-radius: 5px;
+    box-shadow: 8px 8px 10px #787777;
 }
 .content-recipes{
     width: 90%;
@@ -357,7 +357,8 @@ body{
     padding: 10px;
     border: none;
     border-radius: 12px;
-    outline: none
+    outline: none;
+ 
 }
 .pagin{
     display: flex;
@@ -384,7 +385,12 @@ body{
 }
 
 /* Page_Home : */
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
 section{
     display: flex;
     flex-direction: column;
@@ -407,7 +413,7 @@ section{
     margin-top: 15px;
     
 }
-#part{
+#contenu{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -469,7 +475,6 @@ section{
     color: #df0051;
 }
 
-
 .add-com{
     border: none;
     padding: 10px;
@@ -528,59 +533,34 @@ section{
     color: red;
 }
 
-
-/*Header de la partie Home */
-
-
-.header{
-    padding: 0;
-    margin: 0;
-    
-}
-
-.body{
-    width: 100%;
-    height: 120vh;
-    background-image: url(images/background\ home.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-#btn-Singup{
-    color: red;
-    font-weight: 700;
-    font-size: 18px;
-    background: transparent;
-    border-radius: 30px;
-    padding: 10px 20px;
-}
-#btn-Login{
-    color: red;
-    font-weight: 700;
-    font-size: 18px;
-    background: white;
-    border-radius: 30px;
-    padding: 10px 20px;
-    box-shadow: 4px 4px 10px #8b8c8b;
-}
-#Search{
-    background: white;
-    padding: 5px 10px;
-    border-radius: 30px;
+.alert{
     display: flex;
-    text-align: center;
-    align-items: center;
     margin: 0 auto;
-    box-shadow: 4px 4px 10px #dbdcdb;
+    position: fixed;
+    left: 430px;
+    top: 20px;
+    background:rgb(198, 232, 198);
+    color: green;
+    font-weight: 700;
+    z-index: 999;
+    box-shadow: 0 4px 20px rgb(107, 107, 107);
+    align-items: center;
+    justify-content: center;
+    transition: .8s;
+    display: none;
 }
-#Search > button {
+.alert > h1{
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.alert > p {
+    padding-top: 7px;
+    font-size: 18px;
+    color: black;
     cursor: pointer;
-    border: none;
-    padding: 5px 8px;
-    background: transparent;
+    font-weight: 400;
 }
-#Input-search{
-    outline: none;
-    padding: 5px;
-    border: none;
-}
-
