--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
    
 }
 header{
-    background: url(Modern\ Business\ Notion\ Header.png) no-repeat top right/cover;
+    background: url(/images/recettes.jpg) no-repeat top right/cover;
     padding: 30px;
     border-bottom: 1px solid rgb(188, 188, 188);
 }
