--- a/style.css
+++ b/style.css
@@ -440,32 +440,17 @@ section{
 #btnAdd:hover {
     background-color: #ec1fd8; /* Darker green on hover */
 }
-#BtnDeExplore {
-    border: none;
-    background-color: #fff;
-    color: #000;
-    padding: 10px 20px;
+.hrefExplore{
+    color:#df0051;
     font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.3s;
-    position: relative;
+    
 }
-#BtnDeExplore::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: -20px; /* Extends line 20px to the left */
-    width: calc(100% + 40px); /* Extends line 20px on both sides */
-    height: 2px;
-    background-color: #000;
-    transition: 0.3s;
+.BtnExplore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor:pointer;
 }
-
-#BtnDeExplore:hover::after {
-    width: calc(100% + 40px); /* Maintain extended width on hover */
-}
-
 #part >p >span{
     color: #df0051;
 }
